--- a/css/violations.css
+++ b/css/violations.css
@@ -1,6 +1,7 @@
 .ac-vio-array {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .add-student-wrapper {
@@ -9,13 +10,29 @@
     align-items: center;
     background: var(--uscgreen);
     border-radius: 8px;
-
+    border: 3px solid #0bbf5f;
     width: fit-content;
-    height: fit-content;
+    height: fit-content; 
     padding: 15px;
     padding-right: 4em;
     margin: 10px;
 
+}
+
+.blue {
+    background: var(--uscblue);
+    border: 3px solid #15b6f6;
+}
+
+.blue:hover {
+    background: #15b6f6 !important;
+}
+.yellow {
+    background: var(--uscyellow);
+    border: 3px solid #ffda72;
+}
+.yellow:hover {
+    background: #ffda72 !important;
 }
 
 .add-student-wrapper:hover {
@@ -47,7 +64,7 @@
 .add-student-wrapper > .info > h3 {
     font-family: "Quicksand", sans-serif;
     font-weight: 300;
-    text-align: center;
+
 }
 
 .add-student-wrapper > .info > h1,
@@ -78,16 +95,16 @@ p {
         0px 2.1px 18.3px rgba(0, 0, 0, 0.04),
         0px 3.3px 28.2px rgba(0, 0, 0, 0.035),
         0px 5.1px 44px rgba(0, 0, 0, 0.03),
-        0px 8.5px 73.1px rgba(0, 0, 0, 0.024),
-        0px 17px 146px rgba(0, 0, 0, 0.017);
+        0px 8.5px 73.1px rgba(0, 0, 0, 0.024);
+
     -webkit-box-shadow: 0px 0.3px 2.9px rgba(0, 0, 0, 0.07),
         0px 0.8px 6.6px rgba(0, 0, 0, 0.053),
         0px 1.3px 11.5px rgba(0, 0, 0, 0.046),
         0px 2.1px 18.3px rgba(0, 0, 0, 0.04),
         0px 3.3px 28.2px rgba(0, 0, 0, 0.035),
         0px 5.1px 44px rgba(0, 0, 0, 0.03),
-        0px 8.5px 73.1px rgba(0, 0, 0, 0.024),
-        0px 17px 146px rgba(0, 0, 0, 0.017);
+        0px 8.5px 73.1px rgba(0, 0, 0, 0.024);
+
 }
 
 .student-active-wrapper:hover {
