--- a/css/page.css
+++ b/css/page.css
@@ -108,5 +108,15 @@ footer {
     margin-left: 8px;
 }
 
+.header-links {
+    display: flex; flex-direction: row; align-items: center;  justify-content: center; color: white;
+    background: var(--uscgreen);
+}
+
+.header-links h3 {
+    text-align: center;
+    margin: 12px;
+    font-weight: 400;
+}
 
   
